# AgentSentry

./: .gitattributes  .gitignore  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  rust.yml
cli/: README.md
control/: Dockerfile  README.md  config.example.yaml  go.mod
control/cmd/sentry-control/: main.go  seed.go
control/internal/api/: server.go  server_test.go
control/internal/model/: model.go
control/internal/store/: clickhouse.go  postgres.go  postgres_test.go
control/migrations/clickhouse/: 001_init.sql
control/migrations/postgres/: 001_init.sql
deploy/: docker-compose.dev.yml
deploy/bicep/: README.md
deploy/helm/: README.md
deploy/terraform/: README.md
docs/: architecture.md  install.md  usage-developer.md  usage-user.md
docs/adr/: 0001-mcp-otel-chokepoint.md  0002-apache-open-core.md  0003-rego-cedar.md  0004-rust-gateway.md  0005-monorepo.md
examples/: README.md
gateway/: Cargo.toml  Dockerfile  README.md  config.example.yaml
gateway/crates/sentry-gateway/: Cargo.toml
gateway/crates/sentry-gateway/src/: config.rs  identity.rs  lib.rs  main.rs  policy.rs  proxy.rs  redact.rs  span.rs  state.rs  telemetry.rs
gateway/crates/sentry-gateway/tests/: integration_test.rs  unit_tests.rs
integrations/bedrock-agentcore/: README.md
integrations/langchain-python/: README.md  example.py  policy.rego  requirements.txt
integrations/maf-dotnet/: README.md
proto/: README.md
proto/agentsentry/v1/: common.proto  control.proto  ingest.proto
scripts/: smoke.ps1  smoke.sh
sdks/dotnet/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/agentsentry/: __init__.py  client.py  langchain.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md
ui/: Dockerfile  README.md  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/agents/: page.tsx
ui/app/api/proxy/[...path]/: route.ts
ui/app/components/: CopyButton.tsx  Sparkline.tsx  StatusPill.tsx
ui/app/onboarding/: page.tsx
ui/app/policies/: page.tsx
ui/app/policies/[id]/: page.tsx
ui/app/traces/: page.tsx
ui/lib/: api.ts  browserApi.ts
ui/public/: README.txt
