[package]
name        = "sentry-gateway"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "AgentSentry runtime gateway — MCP + LLM proxy with inline policy and redaction"

[[bin]]
name = "sentry-gateway"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.5"
tower-http  = { version = "0.5", features = ["trace", "cors"] }
hyper       = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regorus     = "0.2"
regex       = "1"
once_cell   = "1"
uuid        = { version = "1", features = ["v4"] }
time        = { version = "0.3", features = ["formatting", "macros"] }
async-trait = "0.1"
parking_lot = "0.12"
clap        = { version = "4", features = ["derive", "env"] }
futures     = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
sha2        = "0.10"
hex         = "0.4"
bytes       = "1"

[dev-dependencies]
wiremock    = "0.6"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
